:bug: Fix overflow of mini editors
Issue #4400

--- a/static/text-editor-light.less
+++ b/static/text-editor-light.less
@@ -12,6 +12,7 @@ atom-text-editor[mini] {
   font-size: @input-font-size;
   line-height: @component-line-height;
   max-height: @component-line-height + 2; // +2 for borders
+  overflow: auto;
 }
 
 atom-overlay {
